--- a/Notes_docs/Rainbow_docs/TODO.txt
+++ b/Notes_docs/Rainbow_docs/TODO.txt
@@ -1,13 +1,17 @@
 Write pseudocode to print the following pattern
-1
-232
-34543
-4567654
+    1
+   232
+  34543
+ 4567654
 567898765
 
+
+todo...
 Write a program to find square root of an input.
 a. Just find the integral part
 b. Find the square root with an accuracy of n decimal points, n is provided by the user.
+https://www.geeksforgeeks.org/find-square-root-number-upto-given-precision-using-binary-search/
+
 
 9. You are given S a sequence of n integers S = s 1 , s 2 , ..., s n . Please, compute if it is
 possible to split S into two parts: s 1 , s 2 , ..., s i and s i+1 , s i+2 , ..., s n (1 <= i < n) in such a
@@ -15,3 +19,7 @@ way that the first part is strictly decreasing while the second is strictly incr
 First take n as input and then take n more integers, Output yes or no.
 
 2 pattern questions .
+
+dynamic programming questions
+
+data structire questions 
